fix: Resolved change proposed by copilot. feat: Added new conditions for reconnection handling